# gcp-io

./: README.md  pyproject.toml  setup.py
.github/workflows/: tests.yaml
gcp_io/: __init__.py  gcp_interface.py  utils.py
test/: test_files.py  test_image.py  test_video.py  test_yaml.py
